fixed positioning of misaligned elements

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body {
 .content-container{
     box-shadow: 5px 5px 5px 5px rgb(31, 31, 31);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(221, 221, 221);
+    background: linear-gradient(to right, rgb(216, 238, 240), white);
+    
 }
 
 .header-container {
@@ -40,17 +41,19 @@ body {
     justify-content: space-between;
     align-items: center;
     height: 40vh;
-    font-size: 20px;
+    font-size: 17px;
     border-radius: 4px;
+    background: linear-gradient(to right, rgb(206, 239, 241), white);
+    
     
 }
 .about-me{
     display: flex;
     padding: 5vh;
-    align-items: flex-start;
+    text-align: center;
     flex-direction: column;
     max-width:100vh;
-    
+    text-shadow: 2px 2px white;
 }
 .about-right{
     display: flex;
@@ -60,7 +63,7 @@ body {
     
     flex-direction: column;
     min-width: 20vh;
-    padding: 10px;
+    padding: 30px;
     background-color: rgb(248, 242, 233);
     box-shadow: 0px 0px 2px 2px black;
     
@@ -81,22 +84,6 @@ ul{
     list-style-type: none;
 }
 
-.project-one{
-    min-height: 15vh;
-    min-width: 15vh;
-    max-width: 30vh;
-    max-height: 30vh;
-    border-radius: 8px;
-    padding: 5vh;
-    margin-bottom: 5vh;
-    cursor: pointer;
-    background-image: url(calc-app-2.png);
-    background-position: center;
-    background-size: cover;
-    
-   
-}
-
 .project-one-right{
     height: fit-content;
     padding: 20px;
@@ -104,29 +91,11 @@ ul{
     box-shadow: 0px 0px 2px 2px black;
     min-height: 15vh;
     min-width: 15vh;
-    
-    
-}
-.project-one:hover{
-    border: 4px solid white;
+    margin: 10%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
-.project-two{
-    min-height: 15vh;
-    min-width: 15vh;
-    max-width: 30vh;
-    max-height: 30vh;
-    border-radius: 8px;
-    padding: 5vh;
-    
-    margin-bottom: 5vh;
-    cursor: pointer;
-    background-image: url(rps-2.png);
-    background-position: center;
-    background-size: cover;
-    flex-grow: 2;
-    
-}
 .project-two-right{
     height: fit-content;
     padding: 20px;
@@ -134,22 +103,22 @@ ul{
     box-shadow: 0px 0px 2px 2px black;
     min-height: 15vh;
     min-width: 15vh;
+    margin: 10%;
+    margin-top: 0px;
 }
 
-.project-two:hover{
-    border: 4px solid white;
-}
+
 
 .project-one-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     gap: 30%;
     padding: 5vh;
 }
 .project-two-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     gap: 30%;
     padding: 5vh;
